force-app/main/default/objects/SysParam__c/SysParam__c.object-meta.xml
<CustomObject>
    <description>SysParam</description>
    <label>SysParam</label>
    <nameField>
        <displayFormat>PRM-{000000}</displayFormat>
        <label>SysParam Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>SysParams</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>