force-app/main/default/objects/SysParam__c/fields/paramName__c.field-meta.xml
<CustomField>
    <fullName>paramName__c</fullName>
    <description>param name</description>
    <label>paramName</label>
    <length>100</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>