force-app/main/default/objects/SysParam__c/fields/ParamType__c.field-meta.xml
<CustomField>
    <fullName>ParamType__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Param Type (true if used by client App)</description>
    <label>App Parameter</label>
    <type>Checkbox</type>
</CustomField>