force-app/main/default/objects/SysParam__c/fields/paramValue__c.field-meta.xml
<CustomField>
    <fullName>paramValue__c</fullName>
    <description>param Value</description>
    <inlineHelpText>param Value</inlineHelpText>
    <label>paramValue</label>
    <length>100</length>
    <required>true</required>
    <type>Text</type>
</CustomField>