force-app/main/default/objects/SysParam__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>paramName__c</columns>
    <columns>paramValue__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>CREATED_DATE</columns>
    <columns>UPDATEDBY_USER</columns>
    <columns>LAST_UPDATE</columns>
    <columns>ParamType__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>